# agentforge

./: .gitignore  MANIFEST.in  README.md  package.json  pyproject.toml
.claude/: settings.local.json
agentforge/: __init__.py  cli.py
claudeforge/: __init__.py  cli.py
docs/: index.html
src/: index.js  logger.js  scaffolder.js  stack-detector.js
src/commands/: add.js  clear.js  create.js  github.js  init.js  project.js  status.js  upgrade.js
templates/: CLAUDE.local.md.tpl  CLAUDE.md.tpl  env.example.tpl  gitignore.tpl
templates/claude/: README.md.tpl  settings.json.tpl  settings.local.json.tpl
templates/claude/agents/: code-reviewer.md.tpl
templates/claude/commands/: analyze-project.md.tpl  commit.md.tpl  explain-codebase.md.tpl  fix-issue.md.tpl  memory-sync.md.tpl  project-health.md.tpl  review-pr.md.tpl  scaffold-structure.md.tpl  setup-project.md.tpl  standup.md.tpl
templates/claude/hooks/: post-tool-use.sh.tpl  pre-tool-use.sh.tpl
templates/claude/rules/: no-sensitive-files.md.tpl
templates/claude/skills/project-conventions/: SKILL.md.tpl
templates/memory/: MEMORY.md.tpl  feedback_communication.md.tpl  project_ai_workflow.md.tpl  user_profile.md.tpl
