[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentforge"
version = "1.0.0"
description = "Forge production-ready AI agent projects — agents, slash commands, memory, CI/CD, and devcontainers in one command"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["agentforge", "claude", "claude-code", "anthropic", "scaffold", "ai", "agents", "cli", "github-actions", "devcontainer"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/your-org/agentforge"
"Bug Tracker" = "https://github.com/your-org/agentforge/issues"

[project.scripts]
agentforge = "agentforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agentforge"]

[tool.hatch.build.targets.wheel.force-include]
"bin"          = "agentforge/_nodejs/bin"
"src"          = "agentforge/_nodejs/src"
"templates"    = "agentforge/_nodejs/templates"
"package.json" = "agentforge/_nodejs/package.json"

[tool.hatch.build.targets.sdist]
include = [
  "agentforge/",
  "bin/",
  "src/",
  "templates/",
  "package.json",
  "pyproject.toml",
  "MANIFEST.in",
  "README.md",
]
